# fastapi-uuid-cat-server

./: .gitignore  Dockerfile  Readme.md  main.py  pyproject.toml
