[tool.poetry]
name = "backend-api-task-v2"
version = "0.1.0"
description = "FastAPI server with UUID and Cat routes"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.18.3"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
